final-prep/codeburst/nginxnetpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginxnetpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: api
      ports:
        - protocol: TCP
          port: 3333
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
